<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="always"/>

    <item
        android:title="@string/history"
        android:id="@+id/history"
        android:icon="@drawable/history"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bookmark"
        android:title="@string/bookmark"
        app:showAsAction="never"/>

    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"/>

    <item
        android:id="@+id/update"
        android:title="@string/check_updates"
        app:showAsAction="never"/>

</menu>